Fixed wrapping buttons on project pages

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -453,6 +453,7 @@ div.hero-row {
 	color: #1900ca;
 	border-radius: 0.2rem;
 	margin-top: 0.45rem;
+	text-wrap: nowrap;
 }
 
 .project-section-permalink-button:hover {
